Added ability to generate attributes for a certain model
