# src/main/java/magpie/user/server/operations/ModelInformation.java
@@ -1,83 +1,0 @@
-package magpie.user.server.operations;
-
-import magpie.user.server.ModelPackage;
-import magpie.user.server.ServerLauncher;
-import magpie.utility.UtilityOperations;
-
-import javax.ws.rs.*;
-import javax.ws.rs.core.Response;
-import javax.ws.rs.core.StreamingOutput;
-import java.io.IOException;
-import java.io.OutputStream;
-
-/**
- * Queries for getting the information about models.
- *
- * @author Logan Ward
- */
-@Path("model/{name}")
-public class ModelInformation {
-    /**
-     * Name of the model
-     */
-    @PathParam("name")
-    private String Name;
-
-    /**
-     * Package storing the model
-     */
-    private ModelPackage Model;
-
-    /**
-     * Get the model used for this request
-     */
-    private void getModel() {
-        if (!ServerLauncher.Models.containsKey(Name)) {
-            throw new WebApplicationException("No such model: " + Name, Response.Status.NOT_FOUND);
-        }
-        Model = ServerLauncher.Models.get(Name);
-    }
-
-    /**
-     * Get information about the model
-     */
-    @GET
-    @Produces("application/json")
-    @Path("/info")
-    public String getModelInfo() {
-        getModel();
-        return Model.toJSON().toString();
-    }
-
-    /**
-     * Download the model file via serialization
-     */
-    @GET
-    @Produces("application/octet-stream")
-    @Path("/model")
-    public StreamingOutput downloadModel() {
-        getModel();
-        return new StreamingOutput() {
-            @Override
-            public void write(OutputStream output) throws IOException, WebApplicationException {
-                UtilityOperations.saveState(Model.Model, output);
-            }
-        };
-    }
-
-    /**
-     * Download the model file via serialization
-     */
-    @GET
-    @Produces("application/octet-stream")
-    @Path("/dataset")
-    public StreamingOutput downloadDataset() {
-        getModel();
-        return new StreamingOutput() {
-            @Override
-            public void write(OutputStream output) throws IOException, WebApplicationException {
-                UtilityOperations.saveState(Model.Dataset, output);
-            }
-        };
-    }
-}
